# vtt-to-md

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
.paw/work/msi-installer-file-association/: CodeResearch.md  Docs.md  ImplementationPlan.md  WorkflowContext.md
.paw/work/msi-installer-file-association/prompts/: 02A-code-research.prompt.md  02B-impl-plan.prompt.md  03A-implement.prompt.md  03B-review.prompt.md  03C-pr-review.prompt.md  03D-review-pr-review.prompt.md  04-docs.prompt.md  05-pr.prompt.md  0X-status.prompt.md
.paw/work/vtt-to-md-cli/: Docs.md  ImplementationPlan.md  Spec.md  SpecResearch.md  WorkflowContext.md
.paw/work/vtt-to-md-cli/prompts/: 01A-spec.prompt.md  01B-spec-research.prompt.md  02A-code-research.prompt.md  02B-impl-plan.prompt.md  03A-implement.prompt.md  03B-review.prompt.md  03C-pr-review.prompt.md  03D-review-pr-review.prompt.md  04-docs.prompt.md  05-pr.prompt.md  0X-status.prompt.md
scripts/: build-msi.ps1
src/: cli.rs  consolidator.rs  error.rs  main.rs  markdown.rs  parser.rs
tests/: MANUAL_TESTS.md  integration_test.rs
wix/: License.rtf  main.wxs
